Add excluded E164s configuration to pre-registration experiment