@@ -5,7 +5,9 @@
 
 package org.whispersystems.textsecuregcm.experiment;
 
-import static org.junit.Assert.*;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
 
@@ -37,7 +39,8 @@ class ExperimentEnrollmentManagerTest {
   private static final UUID ACCOUNT_UUID = UUID.randomUUID();
   private static final String UUID_EXPERIMENT_NAME = "uuid_test";
 
-  private static final String E164 = "+12025551212";
+  private static final String ENROLLED_164 = "+12025551212";
+  private static final String EXCLUDED_164 = "+18005551212";
   private static final String E164_EXPERIMENT_NAME = "e164_test";
 
   @BeforeEach
@@ -82,35 +85,40 @@ class ExperimentEnrollmentManagerTest {
   @ParameterizedTest
   @MethodSource
   void testIsEnrolled_PreRegistrationExperiment(final String e164, final String experimentName,
-      final Set<String> enrolledE164s, final Set<String> includedCountryCodes, final Set<String> excludedCountryCodes,
+      final Set<String> enrolledE164s, final Set<String> excludedE164s, final Set<String> includedCountryCodes,
+      final Set<String> excludedCountryCodes,
       final int enrollmentPercentage,
-      final boolean expectedEnrolled, final String message) {
+      final boolean expectEnrolled, final String message) {
 
     when(preRegistrationExperimentEnrollmentConfiguration.getEnrolledE164s()).thenReturn(enrolledE164s);
+    when(preRegistrationExperimentEnrollmentConfiguration.getExcludedE164s()).thenReturn(excludedE164s);
     when(preRegistrationExperimentEnrollmentConfiguration.getEnrollmentPercentage()).thenReturn(enrollmentPercentage);
     when(preRegistrationExperimentEnrollmentConfiguration.getIncludedCountryCodes()).thenReturn(includedCountryCodes);
     when(preRegistrationExperimentEnrollmentConfiguration.getExcludedCountryCodes()).thenReturn(excludedCountryCodes);
 
-    assertEquals(message, expectedEnrolled, experimentEnrollmentManager.isEnrolled(e164, experimentName));
+    assertEquals(expectEnrolled, experimentEnrollmentManager.isEnrolled(e164, experimentName), message);
   }
 
+  @SuppressWarnings("unused")
   static Stream<Arguments> testIsEnrolled_PreRegistrationExperiment() {
     return Stream.of(
-        Arguments.of(E164, E164_EXPERIMENT_NAME, Collections.emptySet(), Collections.emptySet(),
-            Collections.emptySet(), 0, false, "default configuration expects no enrollment"),
-        Arguments
-            .of(E164, E164_EXPERIMENT_NAME + "-unrelated-experiment", Collections.emptySet(), Collections.emptySet(),
-                Collections.emptySet(), 0, false, "unknown experiment expects no enrollment"),
-        Arguments.of(E164, E164_EXPERIMENT_NAME, Set.of(E164), Collections.emptySet(),
-            Collections.emptySet(), 0, true, "explicitly enrolled E164 overrides 0% rollout"),
-        Arguments.of(E164, E164_EXPERIMENT_NAME, Set.of(E164), Collections.emptySet(),
-            Set.of("1"), 0, true, "explicitly enrolled E164 overrides excluded country code"),
-        Arguments.of(E164, E164_EXPERIMENT_NAME, Collections.emptySet(), Set.of("1"),
+        Arguments.of(ENROLLED_164, E164_EXPERIMENT_NAME, Collections.emptySet(), Collections.emptySet(),
+            Collections.emptySet(), Collections.emptySet(), 0, false, "default configuration expects no enrollment"),
+        Arguments.of(ENROLLED_164, E164_EXPERIMENT_NAME + "-unrelated-experiment", Collections.emptySet(),
+            Collections.emptySet(), Collections.emptySet(), Collections.emptySet(), 0, false,
+            "unknown experiment expects no enrollment"),
+        Arguments.of(ENROLLED_164, E164_EXPERIMENT_NAME, Set.of(ENROLLED_164), Set.of(EXCLUDED_164),
+            Collections.emptySet(), Collections.emptySet(), 0, true, "explicitly enrolled E164 overrides 0% rollout"),
+        Arguments.of(ENROLLED_164, E164_EXPERIMENT_NAME, Set.of(ENROLLED_164), Set.of(EXCLUDED_164),
+            Collections.emptySet(), Set.of("1"), 0, true, "explicitly enrolled E164 overrides excluded country code"),
+        Arguments.of(ENROLLED_164, E164_EXPERIMENT_NAME, Collections.emptySet(), Collections.emptySet(), Set.of("1"),
             Collections.emptySet(), 0, true, "included country code overrides 0% rollout"),
-        Arguments.of(E164, E164_EXPERIMENT_NAME, Collections.emptySet(), Collections.emptySet(),
-            Set.of("1"), 100, false, "excluded country code overrides 100% rollout"),
-        Arguments.of(E164, E164_EXPERIMENT_NAME, Collections.emptySet(), Collections.emptySet(),
-            Collections.emptySet(), 100, true, "enrollment expected for 100% rollout")
+        Arguments.of(EXCLUDED_164, E164_EXPERIMENT_NAME, Collections.emptySet(), Set.of(EXCLUDED_164), Set.of("1"),
+            Collections.emptySet(), 100, false, "excluded E164 overrides 100% rollout"),
+        Arguments.of(ENROLLED_164, E164_EXPERIMENT_NAME, Collections.emptySet(), Collections.emptySet(),
+            Collections.emptySet(), Set.of("1"), 100, false, "excluded country code overrides 100% rollout"),
+        Arguments.of(ENROLLED_164, E164_EXPERIMENT_NAME, Collections.emptySet(), Collections.emptySet(),
+            Collections.emptySet(), Collections.emptySet(), 100, true, "enrollment expected for 100% rollout")
     );
   }
 }
